<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnReadStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_story" />

        <Button
            android:id="@+id/btnCreateStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_story" />

        <Button
            android:id="@+id/btnDictionary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionary" />

        <Button
            android:id="@+id/btnMyStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_story" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>