<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteStoryActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/purple_500">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/write_story"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/wsBackButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/ivBgColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_color_lens_24" />

        <ImageView
            android:id="@+id/ivTvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ivBgColor"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_text_color" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_alignParentStart="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/title"
                        android:textColor="#333"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/purple_500"
                        android:ems="10"
                        android:hint="@string/type_a_title"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="2"
                        android:textColor="#333"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/paragraph"
                        android:textColor="#333"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etParagraph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/purple_500"
                        android:hint="@string/type_your_paragraph"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:textSize="11sp" />


                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/cover_image"
                        android:textColor="#333"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/tap_to_upload_an_image"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <ImageView
                        android:id="@+id/ivCover"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/purple_500"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/tvAnimation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/animation"
                        android:textColor="#333"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/tap_to_upload_an_animation"
                        android:textAlignment="center"
                        android:textSize="10sp" />

                    <ImageView
                        android:id="@+id/ivAnimation"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_animation" />

                    <Button
                        android:id="@+id/tvAudioFileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:drawableLeft="@drawable/ic_select_sound"
                        android:text="@string/select_sound_file" />


                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/submit_your_story"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>
